# knowledge-base

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  fetch.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: agent-triage.yml  close-parent-issues.yml  daily-ingest.yml
.opencode/skills/auto-implement/: SKILL.md
.opencode/skills/auto-push/: SKILL.md
.opencode/skills/commit/: SKILL.md
.opencode/skills/handoff/: SKILL.md
.opencode/skills/implement/: SKILL.md
.opencode/skills/push/: SKILL.md
concepts/ai-workflows/LLM agents/: reliable-agentic-systems.md
concepts/ai-workflows/agent-configuration/: disable-agent-memory.md
concepts/ai-workflows/agent-optimization/: skill-hell.md
docs/adr/: 0001-filesystem-tree-over-database.md  0002-single-script-over-orchestrator.md  0003-audit-subagent-as-llm-retry-loop.md  0004-github-actions-scheduled-workflow-over-cron.md
docs/agents/: testing.md
docs/research/: github-actions-state-persistence.md  opencode-repo-skills.md  substack-private-rss-feed.md  youtube-transcript-vs-ytdlp.md
docs/specs/: daily-ingest.md  knowledge-base-pipeline.md
kb_pipeline/: audit.py  cli.py  config.py  fetcher.py  llm.py  pipeline.py  state.py  writer.py
scripts/: agent-triage.sh  close-completed-parent.sh  daily-ingest.sh
stubs/feedparser/: __init__.pyi
tests/: test_agent_triage.sh  test_audit.py  test_daily_ingest.sh  test_fetcher.py  test_parent_close.sh  test_pipeline.py
tests/fixtures/: simple-rss.xml
tests/integration/: test_audit.py  test_fetcher.py  test_pipeline.py
(+48 files in other folders)
