[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kb_pipeline*"]

[project]
name = "kb-pipeline"
version = "0.1.0"
description = "Knowledge base pipeline for daily content ingest"
requires-python = ">=3.9"
dependencies = [
    "feedparser",
    "requests",
    "trafilatura",
    "yt-dlp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "types-requests",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call the real LLM API and require DEEPSEEK_API_KEY",
]
addopts = "-m 'not integration'"

[tool.mypy]
mypy_path = "stubs"
